--- a/src/FadiPhor.Result.Serialization.Json/FadiPhor.Result.Serialization.Json.csproj
+++ b/src/FadiPhor.Result.Serialization.Json/FadiPhor.Result.Serialization.Json.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <PackageId>FadiPhor.Result.Serialization.Json</PackageId>
@@ -17,5 +17,13 @@
   <ItemGroup>
     <ProjectReference Include="..\FadiPhor.Result\FadiPhor.Result.csproj" />
   </ItemGroup>
-  
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="10.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <InternalsVisibleTo Include="FadiPhor.Result.Serialization.Json.Tests" />
+  </ItemGroup>
+
 </Project>
